--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-# Files and directories created by pub.
 .dart_tool/
 .packages
-
-# Conventional directory for build outputs.
+.vscode/
 build/
-
-# Omit committing pubspec.lock for library packages; see
-# https://dart.dev/guides/libraries/private-files#pubspeclock.
+coverage/
 pubspec.lock
