--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,21 @@
 name: geoclue
-description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# homepage: https://www.example.com
+description: "GeoClue: The Geolocation Service"
+homepage: https://gitlab.freedesktop.org/geoclue/geoclue/-/wikis/home
+version: 0.0.1
 
 environment:
-  sdk: '>=2.16.1 <3.0.0'
+  sdk: '>=2.16.0 <3.0.0'
 
+platforms:
+  linux:
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  collection: ^1.16.0
+  dbus: ^0.7.1
+  meta: ^1.7.0
 
 dev_dependencies:
+  build_runner: ^2.1.8
   lints: ^1.0.0
+  mockito: ^5.1.0
   test: ^1.16.0
